--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Batalha Espacial</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body background-image: url("https://http2.mlstatic.com/D_NQ_NP_969426-MLB46206985063_052021-O.webp")>
+<body style="background-image: url('https://http2.mlstatic.com/D_NQ_NP_969426-MLB46206985063_052021-O.webp')">
 	<div style="width: 400px; height: 500px; position: relative; margin: 0 auto; border: solid; background-color: #fff; top: 50px;">
 		<canvas width="400" height="500"></canvas>
 	</div>
