--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<title>Batalha Espacial</title>
+<title>Anticárie</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body style="background-image: url('https://http2.mlstatic.com/D_NQ_NP_969426-MLB46206985063_052021-O.webp')">
