--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Anticárie</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body style="backgroung-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbQldbbPGwgekyCvyUvdrqCRQ_EJdS2VDStKapBxZozmagUsI1WQnzg_nMtgZp9EGLc0c&usqp=CAU')">
+<body style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbQldbbPGwgekyCvyUvdrqCRQ_EJdS2VDStKapBxZozmagUsI1WQnzg_nMtgZp9EGLc0c&usqp=CAU')">
 	<div style="width: 400px; height: 466px; position: relative; margin: 0 auto; border: solid; background-color: #fff; top: 50px;">
 		<canvas width="400" height="466"></canvas>
 	</div>
