--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Anticárie</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body style="background-image: url('https://www.educacao.org.br/Publico/Geral/Images/logoFB_v.png')">
+<body style="background-image: url('https://seeklogo.com/images/F/fundacao-bradesco-logo-A17AA1FF46-seeklogo.com.png')">
 	<div style="width: 400px; height: 466px; position: relative; margin: 0 auto; border: solid; background-color: #fff; top: 50px;">
 		<canvas width="400" height="466"></canvas>
 	</div>
