--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content= "width=device-width, user-scalable=no">
     <link
       rel="shortcut icon"
       href="https://media-private.canva.com/0emh8/MAFLCA0emh8/1/t.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220902%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220902T025222Z&X-Amz-Expires=57307&X-Amz-Signature=b402293505469ea2044868c7da3152b87d0379edc9bfdbef85c43d0be7069d2f&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2002%20Sep%202022%2018%3A47%3A29%20GMT"
@@ -35,7 +36,7 @@
     <button class="controlButton" style="cursor: pointer; background: transparent; border: none"><img src="img/controls/power.png" alt="" srcset=""  style="width: 100px" id="power"></button>
   </div>
     </div>
-      <div
+      <!-- <div
         style="
           width: 400px;
           height: 466px;
@@ -76,7 +77,7 @@
 		<br />
 		Level: 
 		<label for="Info" id="info-level">Carregando...</label>
-	</div>
+	</div> -->
 </div>
     <audio
       id="music"
