--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         width: 400px;
         height: 466px;
         position: relative;
-        margin: 0 100px 0 auto;
+        margin: 0 auto;
         border: solid;
         background-color: #fff;
         top: 25px;
