--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     >
       <canvas width="400" height="466"></canvas>
       <div class="controls" id="game-buttons" style="align-items: center; margin-top: 25px; display: flex; justify-content: center">
-    <button class="controlButton" style="cursor: pointer; background: transparent; border: none"><img src="img/controls/left.png" alt="" srcset="" style="width: 100px" id="left"></button>
-		<button class="controlButton" style="cursor: pointer; background: transparent; border: none"><img src="img/controls/circle.png" alt="" srcset="" style="width: 100px" id="circle"></button>
-		<button class="controlButton" style="cursor: pointer; background: transparent; border: none"><img src="img/controls/right.png" alt="" srcset=""  style="width: 100px" id="right"></button>
+    <button class="controlButton" style="pointer-events: none; cursor: pointer; background: transparent; border: none"><img src="img/controls/left.png" alt="" srcset="" style="width: 100px" id="left"></button>
+		<button class="controlButton" style="pointer-events: none; cursor: pointer; background: transparent; border: none"><img src="img/controls/circle.png" alt="" srcset="" style="width: 100px" id="circle"></button>
+		<button class="controlButton" style="pointer-events: none; cursor: pointer; background: transparent; border: none"><img src="img/controls/right.png" alt="" srcset=""  style="width: 100px" id="right"></button>
 	</div>
   <div class="options" style="align-items: center;display: flex; justify-content: center">
-    <button class="controlButton" style="cursor: pointer; background: transparent; border: none"><img src="img/controls/play.png" alt="" srcset="" style="width: 100px" id="choose" onclick="toggleFullScreen()"></button>
-    <button class="controlButton" style="cursor: pointer; background: transparent; border: none"><img src="img/controls/power.png" alt="" srcset=""  style="width: 100px" id="power"></button>
+    <button class="controlButton" style="pointer-events: none; cursor: pointer; background: transparent; border: none"><img src="img/controls/play.png" alt="" srcset="" style="width: 100px" id="choose" onclick="toggleFullScreen()"></button>
+    <button class="controlButton" style="pointer-events: none; cursor: pointer; background: transparent; border: none"><img src="img/controls/power.png" alt="" srcset=""  style="width: 100px" id="power"></button>
   </div>
     </div>
       <!-- <div
